--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mychatapp",
+  "name": "expressapp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "express-fileupload": "^1.1.10",
+    "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
     "firebase": "^7.18.0",
     "firebase-admin": "^9.1.0",
